fixed the sidbar collapsed height

--- a/src/core/layout/partials/sidenav-item/sidenav-item.scss
+++ b/src/core/layout/partials/sidenav-item/sidenav-item.scss
@@ -2,7 +2,6 @@
 
 .item {
   & svg-icon {
-    width: 2rem;
     @apply text-gray-400;
   }
   &:hover {
